{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 160,
  "lineage": "ddca3e11-2316-3dcc-a77d-d0cf1284b137",
  "resources": [
    {
      "module": "module.cloud_armor",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "qRHWVJkCbyU=",
            "id": "projects/terraform-study-465601/global/securityPolicies/ip-whitelist-policy",
            "name": "ip-whitelist-policy",
            "project": "terraform-study-465601",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "許可IPリストからのアクセスを許可",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "114.172.171.245/32",
                          "42.125.183.248/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "その他のアクセスをすべて拒否",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/securityPolicies/ip-whitelist-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.custom_vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-16T01:49:53.361-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-study-465601/global/firewalls/gcp-study-allow-ssh-rdp-icmp",
            "log_config": [],
            "name": "gcp-study-allow-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/networks/gcp-study",
            "priority": 1000,
            "project": "terraform-study-465601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/firewalls/gcp-study-allow-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom_vpc.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.custom_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-study-465601/global/networks/gcp-study",
            "mtu": 0,
            "name": "gcp-study",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "802067136797923701",
            "numeric_id": "802067136797923701",
            "project": "terraform-study-465601",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/networks/gcp-study"
          }
        }
      ]
    },
    {
      "module": "module.custom_vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-16T01:49:54.027-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-study-465601/regions/asia-northeast1/subnetworks/my-custom-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/networks/gcp-study",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-study-465601",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.116.128.0/17",
                "range_name": "gke-my-gke-cluster-pods-110f3684",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/terraform-study-465601/locations/global/internalRanges/gke-my-gke-cluster-pods-110f3684"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/regions/asia-northeast1/subnetworks/my-custom-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1026087769054304605
          },
          "dependencies": [
            "module.custom_vpc.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/regions/asia-northeast1/networkEndpointGroups/cloudrun-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-07-13T23:28:28.198-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "16fDDgRRA1o=",
            "generated_id": 7707859079675845987,
            "id": "projects/terraform-study-465601/global/backendServices/cloudrun-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "cloudrun-backend-service",
            "port_name": "http",
            "project": "terraform-study-465601",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/securityPolicies/ip-whitelist-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/backendServices/cloudrun-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_armor.google_compute_security_policy.default",
            "module.cloud_run.google_cloud_run_service.this",
            "module.cloud_sql.google_sql_database_instance.default",
            "module.cloud_storage.google_storage_bucket.default",
            "module.custom_vpc.google_compute_network.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_neg",
            "module.private_service_access.google_compute_global_address.private_ip_alloc",
            "module.private_service_access.google_service_networking_connection.default",
            "module.vpc_connector.google_vpc_access_connector.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.172.103",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-13T23:28:09.858-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/terraform-study-465601/global/addresses/lb-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-static-ip",
            "prefix_length": 0,
            "project": "terraform-study-465601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/addresses/lb-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1158247494754835762,
            "id": "projects/terraform-study-465601/global/forwardingRules/https-forwarding-rule",
            "ip_address": "34.160.172.103",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "terraform-study-465601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/targetHttpsProxies/https-proxy"
          },
          "dependencies": [
            "module.cloud_armor.google_compute_security_policy.default",
            "module.cloud_run.google_cloud_run_service.this",
            "module.cloud_sql.google_sql_database_instance.default",
            "module.cloud_storage.google_storage_bucket.default",
            "module.custom_vpc.google_compute_network.default",
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_global_address.default",
            "module.load_balancer.google_compute_managed_ssl_certificate.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_neg",
            "module.load_balancer.google_compute_target_https_proxy.default",
            "module.load_balancer.google_compute_url_map.default",
            "module.private_service_access.google_compute_global_address.private_ip_alloc",
            "module.private_service_access.google_service_networking_connection.default",
            "module.vpc_connector.google_vpc_access_connector.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-13T23:29:37.158-07:00",
            "fingerprint": "v5o6wsLHdp0=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraform-study-465601/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "terraform-study-465601",
            "proxy_bind": false,
            "proxy_id": 2625555249604664638,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/sslCertificates/custom-domain-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "module.cloud_armor.google_compute_security_policy.default",
            "module.cloud_run.google_cloud_run_service.this",
            "module.cloud_sql.google_sql_database_instance.default",
            "module.cloud_storage.google_storage_bucket.default",
            "module.custom_vpc.google_compute_network.default",
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_managed_ssl_certificate.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_neg",
            "module.load_balancer.google_compute_url_map.default",
            "module.private_service_access.google_compute_global_address.private_ip_alloc",
            "module.private_service_access.google_service_networking_connection.default",
            "module.vpc_connector.google_vpc_access_connector.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-13T23:29:24.575-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/backendServices/cloudrun-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Dhmu0vArWRQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraform-study-465601/global/urlMaps/lb-url-map",
            "map_id": 3385794560127474988,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "terraform-study-465601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cloud_armor.google_compute_security_policy.default",
            "module.cloud_run.google_cloud_run_service.this",
            "module.cloud_sql.google_sql_database_instance.default",
            "module.cloud_storage.google_storage_bucket.default",
            "module.custom_vpc.google_compute_network.default",
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_region_network_endpoint_group.serverless_neg",
            "module.private_service_access.google_compute_global_address.private_ip_alloc",
            "module.private_service_access.google_service_networking_connection.default",
            "module.vpc_connector.google_vpc_access_connector.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_service_access",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.26.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-16T02:55:29.650-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/terraform-study-465601/global/addresses/private-service-access-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "private-service-access-range",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/networks/gcp-study",
            "prefix_length": 16,
            "project": "terraform-study-465601",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-study-465601/global/addresses/private-service-access-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "module.custom_vpc.google_compute_network.default"
          ]
        }
      ]
    }
  ]
}